ui/streamlit/gitops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-llm-rag-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-llm-rag-ui
  template:
    metadata:
      labels:
        app: simple-llm-rag-ui
    spec:
      containers:
        - name: ui
          image: quay.io/arckrish/simple-llm-rag-ui:1.1
          ports:
            - containerPort: 8501
          resources:
            limits:
              cpu: "1"
              memory: "2Gi"
            requests:
              cpu: "250m"
              memory: "512Mi"
